k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-train-service  # Le nom DNS interne
  labels:
    app: kube-train-pod     # requis par le ServiceMonitor pour que Prometheus découvre ce Service
spec:
  type: LoadBalancer         # Le standard Cloud
  #type: NodePort            # Ouverture en dur vers l'extérieur
  #type: ClusterIP           # Le type par défaut (Invisible de l'extérieur)
  selector:
    app: kube-train-pod     # 🎯 C'est ici que la magie opère : il cible tous les pods avec ce label
  ports:
    - name: http            # nom requis par le ServiceMonitor Prometheus
      protocol: TCP
      port: 80              # Le port du Service (Standard)
      targetPort: 8080      # Le port réel de tes conteneurs Java (Spring Boot)
      # nodePort: 30000     # (Optionnel) On pourrait forcer le port externe, mais on laisse K8s choisir (entre 30000-32767).
