k8s/gatekeeper-ct-allowed-repos.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sallowedrepos
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRepos
      validation:
        openAPIV3Schema:
          type: object
          properties:
            repos:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedrepos
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          satisfied := [ok | repo := input.parameters.repos[_]; ok := startswith(container.image, repo)]
          not any(satisfied)
          msg := sprintf("image non autorisée: %v — seuls ces registres sont permis: %v", [container.image, input.parameters.repos])
        }
